# AIHackathon

./: CHANGELOG.md  DELIVERY_SUMMARY.md  PROJECT_SUMMARY.md  README.md  prd.md  requirements.txt
evalflow/: .gitignore  API_DOCUMENTATION.md  EvalFlow_Product_Documentation.docx  INDEX.md  PACKAGE_CONTENTS.txt  QUICK_REFERENCE.md  pyproject.toml  requirements-dev.txt  setup.py
evalflow/core/: dataframe.py  pipeline.py
evalflow/io/: __init__.py
evalflow/metrics/: __init__.py  llm.py
evalflow/src/: __init__.py
evalflow/src/core/: __init__.py  metrics.py
evalflow/src/io/: loaders.py
evalflow/src/metrics/: standard.py
evalflow/src/tests/: test_evalflow.py
evalflow/src/utils/: helpers.py
evalflow/src/viz/: __init__.py
evalflow/utils/: __init__.py
evalflow/viz/: plots.py
examples/: usage_examples.py
slack-bot-dynamic/: .gitignore  api_service.py  bot_factory.py  bot_storage.py  env-example.txt  example_usage.py  main.py  requirements.txt  test_agent.py
